using System;

namespace Entities;

public class User
{
    public int Id { set; get; }
    public string username { set; get; }
    public string password { set; get; }
}
